--- a/Reactfront/src/Componentes/Tablaejemplo/Tabla.css
+++ b/Reactfront/src/Componentes/Tablaejemplo/Tabla.css
@@ -3,6 +3,7 @@
     margin-bottom: 3rem;
     padding: 1rem;
     height: 8rem !important;
+    border-radius: 0.3rem;
 }
 .titulo{
     margin-bottom: 0.5rem;
