--- a/Reactfront/src/Componentes/Tablaejemplo/TablaSimplev2.css
+++ b/Reactfront/src/Componentes/Tablaejemplo/TablaSimplev2.css
@@ -14,7 +14,7 @@
 
 .primero{
     background-color: #1ECCCC;
-    
+    margin-top: 1rem !important;
     color: white !important;
     height: 3rem !important;
     margin-bottom: 1rem ;
@@ -33,6 +33,7 @@
     background-color: #DBE3E3;
     border-radius: 0.3rem;
     margin-bottom: 1rem ;
+    margin-top: 1rem !important;
     height: 3rem;
 }
 
